# ReCharCPL

./: CMakeLists.txt  Hello world.c  LICENSE  README.md  guess.c
0-class/: CMakeLists.txt  Hello.c  guess.c  hello.c
10-class/: echo.c  scores.c  selection-sort-strings.c
11-class/: CMakeLists.txt  bsearch-gnuc.c  decl.c  integrate.c  sort.c
12-class/: CMakeLists.txt  musician.c  sds.c
13-class/: CMakeLists.txt  josephus.c
13-class/ll/: ll.c  ll.h
3-class/: CMakeLists.txt  LeapYear.c  LeapYearEI.c  LeapYearFF.c  min-of-array.c  min.c  minofthree.c
4-class/: CMakeLists.txt  binary-search.c  digits-do-while.c  digits-while.c  palindrome.c  primes.c  selection-sort.c  stars.c
5-class/: CMakeLists.txt  Merge.c  game-of-life.c
7-class/: CMakeLists.txt  binary-search-re.c  bsearch-re.c  fib-iter.c  fib-re.c  main-re.c  min-re.c  min2.c  sum-re.c
8-class/: CMakeLists.txt  radius.c  selection-sort-ptr.c
9-class/: CMakeLists.txt  str-literals.c  strcmp.c  strcpy.c  strlen.c
homework/: A-ASCII.c  A-bsearch.c  A-interpreter.c  A-matrix-mult.c  A-palindrome-1.c  A-pascal.c  A-single.c  A-strs_cat.c  B-change.c  B-factorial.c  B-flip.c  B-formation.c  B-split-sort.c  B-strs_interleaf.c  B-substr.c  B-sum.c  B-tiles.c  B-wine.c  C-PI.c  C-b-ternary-1.c  C-brackets.c  C-fifa.c  C-magic-square.c  C-parse.c  C-poi.c  C-series.c  C-sudoku.c  C-title.c  CMakeLists.txt  D-absolute-prime.c  D-b-ternary-2.c  D-buddy.c  D-collatz.c  D-max.c  D-mines.c  D-polynlist.c  D-time.c  D-tokenizer.c  E-integration.c  E-inverse.c  (+19 more)
test/: B.c  CMakeLists.txt  D.c  E.c  K.c  a+b.c  bubblesort.c  insertsort.c  invert-number.c  kth.c  max-words.c  mixer.c  quicksort.c  selectsort.c  stack_pour.c  test1.c  test2.c
