cmake_minimum_required(VERSION 3.25)
project(ReCharCPL C)
set(CMAKE_C_STANDARD 17)


add_subdirectory(homework)
add_subdirectory(0-class)
add_subdirectory(3-class)
add_subdirectory(test)
add_subdirectory(4-class)
add_subdirectory(5-class)
add_subdirectory(7-class)
add_subdirectory(8-class)
add_subdirectory(9-class)
add_subdirectory(10-class)
add_subdirectory(12-class)
add_subdirectory(11-class)
