add_executable(A-ASCII A-ASCII.c)
add_executable(B-change B-change.c)
add_executable(C-PI C-PI.c)
add_executable(D-time D-time.c)
add_executable(E-julian E-julian.c)
add_executable(F-gravity F-gravity.c)
add_executable(G-equation G-equation.c)
add_executable(A-single A-single.c)
add_executable(factorial factorial.c)
add_executable(C-series C-series.c)
add_executable(D-collatz D-collatz.c)
add_executable(E-inverse E-inverse.c)
add_executable(F-standup F-standup.c)