add_executable(A-ASCII A-ASCII.c)
add_executable(B-change B-change.c)
add_executable(C-PI C-PI.c)
add_executable(D-time D-time.c)
add_executable(E-julian E-julian.c)
add_executable(F-gravity F-gravity.c)
add_executable(G-equation G-equation.c)
add_executable(A-single A-single.c)
add_executable(B-factorial B-factorial.c)
add_executable(C-series C-series.c)
add_executable(D-collatz D-collatz.c)
add_executable(E-inverse E-inverse.c)
add_executable(F-standup F-standup.c)
add_executable(A-palindrome-1 A-palindrome-1.c)
add_executable(B-flip B-flip.c)
add_executable(C-b-ternary-1 C-b-ternary-1.c)
add_executable(E-josephus E-josephus.c)
add_executable(D-b-ternary-2 D-b-ternary-2.c)
add_executable(F-bubble-sort F-bubble-sort.c)
add_executable(G-decimal G-decimal.c)
add_executable(A-matrix-mult A-matrix-mult.c)
add_executable(B-formation B-formation.c)
add_executable(C-sudoku C-sudoku.c)
add_executable(D-mines D-mines.c)
add_executable(E-trace E-trace.c)
add_executable(F-statistics F-statistics.c)
add_executable(G-life G-life.c)
add_executable(H-obstacle H-obstacle.c)
add_executable(B-sum B-sum.c)
add_executable(C-magic-square C-magic-square.c)
add_executable(D-absolute-prime D-absolute-prime.c)
add_executable(E-radix E-radix.c)
add_executable(F-next-permutation F-next-permutation.c)
add_executable(G-pair G-pair.c)
add_executable(A-pascal A-pascal.c)
add_executable(C-poi C-poi.c)
add_executable(B-tiles B-tiles.c)
add_executable(D-max D-max.c)
add_executable(E-integration E-integration.c)
add_executable(F-triangle F-triangle.c)