add_executable(max-words max-words.c)
add_executable(invert-number invert-number.c)
add_executable(E E.c)
add_executable(a+b a+b.c)
add_executable(test1 test1.c)
add_executable(quicksort quicksort.c)
add_executable(bubblesort bubblesort.c)
add_executable(selectsort selectsort.c)
add_executable(insertsort insertsort.c)
add_executable(test2 test2.c)
add_executable(K K.c)
add_executable(D D.c)
add_executable(B B.c)
